<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:baselineAligned="false"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	>
	
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/headHeight"
        android:background="@drawable/title_bar"
         >

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_back_btn"
            android:text="@string/back"
            android:textColor="@color/HeadEdgeColor"
            android:textSize="@dimen/headEdgeTextSize"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/friend_list_myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/goodsInfo"
            android:textColor="@color/HeadCenterColor"
            android:textSize="@dimen/headCenterTextSize" />
        <Button
            android:id="@+id/bt_fenxiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_add_btn"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/fenxiangapp"
            android:textColor="@color/HeadEdgeColor"
            android:textSize="@dimen/headEdgeTextSize"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/body_bg" >

        <Button
            android:id="@+id/btPrice"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPrice"
            android:background="@drawable/top_add_btn" />

        <Button
            android:id="@+id/btTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btTime"
            android:background="@drawable/top_add_btn" />

        <Button
            android:id="@+id/btCity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btCity"
            android:background="@drawable/top_add_btn" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >

		<ListView
		    android:id="@+id/myListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        </LinearLayout>

</LinearLayout>
