<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/BodyBg">
    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/headHeight"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >
        <Button
            android:id="@+id/all_chat_back"
            android:layout_width="@dimen/headEdgeWidth"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/headEdgeMargin"
            android:paddingLeft="@dimen/headEdgePadding"
            android:background="@drawable/top_back_btn"
            android:text="@string/backReturn"
            android:textColor="@color/HeadEdgeColor"
            android:textSize="@dimen/headEdgeTextSize" />
      
    </RelativeLayout>

    <ListView
        android:id="@+id/all_formclient_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@null"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:stackFromBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/chatBottomBG" >

        <EditText
            android:id="@+id/all_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:hint="@string/chatInput"/>

        <Button
            android:id="@+id/all_btn_sendtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/send" />

        <Button
            android:id="@+id/all_btn_sendpic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/pic" />

        <com.bfz.zhbao.utils.RecordButton
            android:id="@+id/all_btn_sendaudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" 
            android:text="@string/record"/>
    </LinearLayout>
</LinearLayout>