<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
  	  >
        <ImageView
            android:id="@+id/usrPhoto"
            android:layout_width="@dimen/ListPhotoSize"
            android:layout_height="@dimen/ListPhotoSize"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_margin="@dimen/ListCenterMargin"
            android:layout_toRightOf="@id/usrPhoto">

            <TextView
                android:id="@+id/usrName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usrName" />

            <TextView
                android:id="@+id/addressInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usrAddress" />

            
        </LinearLayout>

        <TextView
            android:id="@+id/addAsFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add" />

	</RelativeLayout>
</LinearLayout>
