<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/BodyBg" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verifyMarginTop"
        android:gravity="center"
        android:text="@string/pleaseInput"
        android:textColor="@color/HeadEdgeColor"
        android:textSize="@dimen/verifyTextSize" />

    <EditText
        android:id="@+id/verfy"
        android:layout_width="@dimen/verifyEditWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/verifyMarginTop"
        android:layout_gravity="center"
        android:hint="@string/pleaseInput"
        android:inputType="phone" >

    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/verifyBottomTop"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:textSize="@dimen/sureTextSize" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancle"
            android:textSize="@dimen/sureTextSize" />
    </LinearLayout>

</LinearLayout>