<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/BodyBg">
    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/headHeight"
        android:orientation="vertical" 
        android:background="@drawable/title_bar">
        <Button
            android:id="@+id/chat_back"
            android:layout_width="@dimen/headEdgeWidth"
            android:layout_height="match_parent"
            android:background="@drawable/top_back_btn"
            android:layout_centerVertical="true"
            android:text="@string/backReturn"
            android:textColor="@color/HeadEdgeColor"
            android:textSize="@dimen/headEdgeTextSize"  />
        <TextView
            android:id="@+id/chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/HeadCenterColor"
            android:textSize="@dimen/headCenterTextSize" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/chat_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_footer_bg"
        android:layout_alignParentBottom="true" >
		<com.bfz.zhbao.utils.RecordButton
            android:id="@+id/btn_sendaudio"
            android:layout_width="@dimen/chatBottomBtnWidth"
            android:layout_height="@dimen/chatBottomBtnHeight"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/chat_send_btn"
            android:text="@string/record"/>
		 <Button
            android:id="@+id/btn_sendpic"
            android:layout_width="@dimen/chatBottomBtnWidth"
            android:layout_height="@dimen/chatBottomBtnHeight"
            android:layout_toLeftOf="@id/btn_sendaudio"
            android:layout_centerVertical="true"
            android:background="@drawable/chat_send_btn"
            android:text="@string/pic" />
		 <Button
            android:id="@+id/btn_sendtext"
            android:layout_width="@dimen/chatBottomBtnWidth"
            android:layout_height="@dimen/chatBottomBtnHeight"
            android:layout_toLeftOf="@id/btn_sendpic"
            android:layout_centerVertical="true"
            android:background="@drawable/chat_send_btn"
            android:text="@string/send" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/chatBottomBtnHeight"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_sendtext"
            android:hint="@string/chatInput"
            android:textSize="@dimen/chatBottomEditSize" />

    </RelativeLayout>
    
    <ListView
        android:id="@+id/formclient_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_layout"
        android:layout_above="@id/chat_footer"
        android:cacheColorHint="@null"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:stackFromBottom="true" />
</RelativeLayout>